--- a/index - copia.html
+++ b/index - copia.html
@@ -24,7 +24,7 @@
         <img src="./images/logo.png" alt="logo" />
       </a>
     </div>
-    <nav class="menuCompleto">
+    <nav>
       <ul>
         <li><a href="./index.html">Inicio</a></li>
         <li><a href="./caracteristicas.html">Características</a></li>
@@ -33,17 +33,11 @@
         <li><a href="./contacto.html">Contacto</a></li>
       </ul>
     </nav>
-
-    <div class="menuHamburguesa">
-      <a href="./index.html">
-        <img src="./images/hamburger4.png" alt="hamburger" />
-      </a>
-    </div>
   </header>
 
 
   <!-- HERO -->
-  <section class="imagenPrincipal pruebaHero">
+  <section class=" pruebaHero">
 
   </section>
 
@@ -79,10 +73,10 @@
 
 
     <!-- SIDEBAR -->
-    <aside class="bloqueAside">
-
+    <aside class="pruebaAside">
+      <!--
       <img src="./images/aplicacion1.jpg" alt="logo" />
-
+      -->
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
         architecto minus perspiciatis expedita nesciunt, aut ratione delectus
@@ -100,63 +94,8 @@
   </div>
 
   <!-- FOOTER -->
-  <footer>
-    <div class="footerGrid">
-
-
-
-
-      <section>
-        <div class="formasContacto">
-          <div>
-            <a href="mailto:cuenta@deemail.com" target="_blank">
-              <img src="./images/icono-email1.png" alt="logo" />
-            </a>
-          </div>
-          <div>
-            <a href="mailto:cuenta@deemail.com" target="_blank">
-              contacto@aplicacionweb.com
-            </a>
-          </div>
-        </div>
-        <div class="formasContacto">
-          <div>
-            <a href="tel:01234567890">
-              <img src="./images/icono-telefono1.png" alt="logo" />
-            </a>
-          </div>
-          <div>
-            <a href="tel:01234567890">
-              +54 11 1234-5678
-            </a>
-
-          </div>
-        </div>
-        <div class="formasContacto">
-          <div>
-            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank">
-              <img src="./images/icono-ubicacion1.png" alt="logo" />
-            </a>
-          </div>
-          <div>
-            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank">
-              Av. Cabildo 2000, C1428, CABA, Argentina
-            </a>
-
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="formasContacto">
-          <h1>Suscribite a nuestro Newsletter para recibir Promociones & Noticias</h1>
-          <form>
-            <input type="email" name="emailSuscripcion" id="emailSuscripcion" placeholder="tu@email.com">
-            <input type="submit" value="Suscribirme" />
-          </form>
-        </div>
-      </section>
-
-    </div>
+  <footer class="pruebaFooter">
+    <p>Copyright Pablo 2021</p>
   </footer>
 </body>
 
