Sitio Full Responsive

--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,14 +15,17 @@
     rel="stylesheet">
 </head>
 
+
 <body>
+
+  <!-- CABECERA -->
   <header class="cabecera">
     <div class="cabeceraLogo">
       <a href="./index.html">
         <img src="./images/logo.png" alt="logo" />
       </a>
     </div>
-    <nav>
+    <nav class="menuCompleto">
       <ul>
         <li><a href="./index.html">Inicio</a></li>
         <li><a href="./caracteristicas.html">Características</a></li>
@@ -30,47 +34,142 @@
         <li><a href="./contacto.html">Contacto</a></li>
       </ul>
     </nav>
+
+    <div class="menuHamburguesa">
+      <a href="./index.html">
+        <img src="./images/hamburger4.png" alt="hamburger" />
+      </a>
+    </div>
   </header>
 
-  <h1>Características</h1>
 
-  <section class="contenido">
-    <ol>
-      <li>
-        Característica 1
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-          totam placeat voluptatum sunt harum id exercitationem quos porro?
-          Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-          tenetur harum nemo!
-        </p>
-      </li>
-      <li>
-        Característica 2
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-          totam placeat voluptatum sunt harum id exercitationem quos porro?
-          Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-          tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
-          dignissimos iusto quidem ratione nulla, corrupti eligendi magni
-          veritatis recusandae atque laudantium nesciunt cum dolorum odio.
-        </p>
-      </li>
-      <li>
-        Característica 3
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-          totam placeat voluptatum sunt harum id exercitationem quos porro?
-          Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-          tenetur harum nemo!
-        </p>
-      </li>
-    </ol>
-  </section>
 
+
+
+
+  <!-- DESCRIPCION -->
+  <div class="contenedorFlex redondeoVisual">
+
+    <section class="seccionDescripcion">
+
+
+      <h1>Características</h1>
+
+      <section class="contenido">
+        <ol>
+          <li>
+            Característica 1
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
+              totam placeat voluptatum sunt harum id exercitationem quos porro?
+              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
+              tenetur harum nemo!
+            </p>
+          </li>
+          <li>
+            Característica 2
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
+              totam placeat voluptatum sunt harum id exercitationem quos porro?
+              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
+              tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
+              dignissimos iusto quidem ratione nulla, corrupti eligendi magni
+              veritatis recusandae atque laudantium nesciunt cum dolorum odio.
+            </p>
+          </li>
+          <li>
+            Característica 3
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
+              totam placeat voluptatum sunt harum id exercitationem quos porro?
+              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
+              tenetur harum nemo!
+            </p>
+          </li>
+        </ol>
+      </section>
+
+
+    </section>
+
+
+
+    <!-- SIDEBAR -->
+    <aside>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/W-f6F2gxrl4" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum exercitationem, repudiandae debitis fugit
+        dolorem dignissimos consectetur mollitia obcaecati? Ducimus explicabo dolore maxime recusandae, quod sapiente
+        iste
+        eaque architecto? Sunt, nam.
+      </p>
+    </aside>
+
+  </div>
+
+
+
+
+  <!-- FOOTER -->
   <footer>
-    <p>Copyright Pablo 2021</p>
+    <div class="footerGrid redondeoVisual">
+
+      <section>
+        <div class="formasContacto">
+          <div>
+            <a href="mailto:cuenta@deemail.com" target="_blank">
+              <img src="./images/icono-email1.png" alt="email" />
+            </a>
+          </div>
+          <div>
+            <a href="mailto:cuenta@deemail.com" target="_blank">
+              contacto@aplicacionweb.com
+            </a>
+          </div>
+        </div>
+        <div class="formasContacto">
+          <div>
+            <a href="tel:01234567890">
+              <img src="./images/icono-telefono1.png" alt="telefono" />
+            </a>
+          </div>
+          <div>
+            <a href="tel:01234567890">
+              +54 11 1234-5678
+            </a>
+
+          </div>
+        </div>
+        <div class="formasContacto">
+          <div>
+            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank">
+              <img src="./images/icono-ubicacion1.png" alt="ubicacion" />
+            </a>
+          </div>
+          <div>
+            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank">
+              Av. Cabildo 2000, C1428, CABA, Argentina
+            </a>
+
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="formasContacto">
+          <h1>Suscribite a nuestro Newsletter para recibir Promociones & Noticias</h1>
+          <form>
+            <input type="email" name="emailSuscripcion" id="emailSuscripcion" placeholder="tu@email.com">
+            <input type="submit" value="Suscribirme" />
+          </form>
+        </div>
+      </section>
+
+    </div>
   </footer>
 </body>
 
