--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,7 +19,7 @@
 <body>
 
   <!-- CABECERA -->
-  <header class="cabecera pruebaHeader">
+  <header class="cabecera">
     <div class="cabeceraLogo">
       <a href="./index.html">
         <img src="./images/logo.png" alt="logo" />
@@ -42,14 +43,19 @@
   </header>
 
 
+
+
   <!-- HERO -->
-  <section class="imagenPrincipal pruebaHero">
+  <section class="imagenPrincipal"></section>
 
-  </section>
 
+
+
+  <!-- DESCRIPCION -->
   <div class="contenedorFlex redondeoVisual">
-    <!-- DESCRIPCION -->
-    <section class="pruebaSection">
+
+    <section class="seccionDescripcion">
+
       <h1>Aplicación Web</h1>
 
       <article class="contenido">
@@ -66,51 +72,56 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga officia
           possimus, quae est id dolorum animi molestiae, enim ex amet et
           laboriosam atque obcaecati! Consectetur, sequi placeat. Ratione, earum
-          provident?
+          provident? Aut ratione delectus rem doloribus dolore eos molestias.
         </p>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
           itaque perferendis magnam quia animi sequi aperiam excepturi illo
           rerum. Consequatur qui deserunt, molestiae rerum voluptatum natus
-          ipsam nam optio repellat.
+          ipsam nam optio repellat. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit.
         </p>
       </article>
+
     </section>
 
 
-    <!-- SIDEBAR -->
-    <aside class="bloqueAside">
 
-      <img src="./images/aplicacion1.jpg" alt="logo" />
+    <!-- SIDEBAR -->
+    <aside>
+
+      <img src="./images/aplicacion1.jpg" alt="Aplicacion" />
 
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
         architecto minus perspiciatis expedita nesciunt, aut ratione delectus
         rem doloribus dolore voluptatibus eos odio dolor cum molestias
         consectetur itaque ipsam eum! Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Itaque molestias quidem illo unde est repudiandae
+        adipisicing elit. Itaque
         quis tempore odio, neque non, aliquam reprehenderit nulla numquam
         deserunt, quisquam aut. Adipisci, repudiandae. Tempore.
       </p>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum exercitationem, repudiandae debitis fugit
         dolorem dignissimos consectetur mollitia obcaecati? Ducimus explicabo dolore maxime recusandae, quod sapiente
         iste
-        eaque architecto? Sunt, nam.</p>
+        eaque architecto? Sunt, nam.
+      </p>
     </aside>
+
   </div>
+
+
+
 
   <!-- FOOTER -->
   <footer>
-    <div class="footerGrid">
-
-
-
+    <div class="footerGrid redondeoVisual">
 
       <section>
         <div class="formasContacto">
           <div>
             <a href="mailto:cuenta@deemail.com" target="_blank">
-              <img src="./images/icono-email1.png" alt="logo" />
+              <img src="./images/icono-email1.png" alt="email" />
             </a>
           </div>
           <div>
@@ -122,7 +133,7 @@
         <div class="formasContacto">
           <div>
             <a href="tel:01234567890">
-              <img src="./images/icono-telefono1.png" alt="logo" />
+              <img src="./images/icono-telefono1.png" alt="telefono" />
             </a>
           </div>
           <div>
@@ -135,7 +146,7 @@
         <div class="formasContacto">
           <div>
             <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank">
-              <img src="./images/icono-ubicacion1.png" alt="logo" />
+              <img src="./images/icono-ubicacion1.png" alt="ubicacion" />
             </a>
           </div>
           <div>
@@ -146,6 +157,7 @@
           </div>
         </div>
       </section>
+
       <section>
         <div class="formasContacto">
           <h1>Suscribite a nuestro Newsletter para recibir Promociones & Noticias</h1>
