--- a/planes.html
+++ b/planes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,14 +15,17 @@
     rel="stylesheet">
 </head>
 
+
 <body>
+
+  <!-- CABECERA -->
   <header class="cabecera">
     <div class="cabeceraLogo">
       <a href="./index.html">
         <img src="./images/logo.png" alt="logo" />
       </a>
     </div>
-    <nav>
+    <nav class="menuCompleto">
       <ul>
         <li><a href="./index.html">Inicio</a></li>
         <li><a href="./caracteristicas.html">Características</a></li>
@@ -30,72 +34,151 @@
         <li><a href="./contacto.html">Contacto</a></li>
       </ul>
     </nav>
+
+    <div class="menuHamburguesa">
+      <a href="./index.html">
+        <img src="./images/hamburger4.png" alt="hamburger" />
+      </a>
+    </div>
   </header>
 
-  <h1>Planes</h1>
 
-  <section>
-    <table>
-      <tr>
-        <th>Estándar</th>
-        <th>Plus</th>
-        <th>Premium</th>
-      </tr>
-      <tr>
-        <td>Lorem ipsum dolor sit amet</td>
-        <td>Lorem ipsum dolor sit amet</td>
-        <td>Lorem ipsum dolor sit amet</td>
-      </tr>
-      <tr>
-        <td>consectetur adipisicing elit</td>
-        <td>consectetur adipisicing elit</td>
-        <td>consectetur adipisicing elit</td>
-      </tr>
-      <tr>
-        <td>Quisquam architecto minus</td>
-        <td>Quisquam architecto minus</td>
-        <td>Quisquam architecto minus</td>
-      </tr>
-      <tr>
-        <td>perspiciatis expedita nesciunt</td>
-        <td>perspiciatis expedita nesciunt</td>
-        <td>perspiciatis expedita nesciunt</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td>aut ratione delectus rem indi</td>
-        <td>aut ratione delectus rem indi</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td>doloribus dolore voluptatibus</td>
-        <td>doloribus dolore voluptatibus</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td>eos odio dolor cum itaque</td>
-        <td>eos odio dolor cum itaque</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td>consectetur itaque ipsam eum</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td>Itaque molestias quidem eti</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td>Fuga officia possimus tempore</td>
-      </tr>
-    </table>
-  </section>
 
+
+
+
+  <!-- DESCRIPCION -->
+  <div class="contenedorFlex redondeoVisual">
+
+    <section class="seccionDescripcion">
+
+      <h1>Planes</h1>
+
+      <section class="contenido">
+        <table>
+          <tr>
+            <th>Estándar</th>
+            <th>Plus</th>
+            <th>Premium</th>
+          </tr>
+          <tr>
+            <td>Lorem ipsum dolor sit amet</td>
+            <td>Lorem ipsum dolor sit amet</td>
+            <td>Lorem ipsum dolor sit amet</td>
+          </tr>
+          <tr>
+            <td>consectetur adipisicing elit</td>
+            <td>consectetur adipisicing elit</td>
+            <td>consectetur adipisicing elit</td>
+          </tr>
+          <tr>
+            <td>Quisquam architecto minus</td>
+            <td>Quisquam architecto minus</td>
+            <td>Quisquam architecto minus</td>
+          </tr>
+          <tr>
+            <td>perspiciatis expedita nesciunt</td>
+            <td>perspiciatis expedita nesciunt</td>
+            <td>perspiciatis expedita nesciunt</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>aut ratione delectus rem indi</td>
+            <td>aut ratione delectus rem indi</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>doloribus dolore voluptatibus</td>
+            <td>doloribus dolore voluptatibus</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>eos odio dolor cum itaque</td>
+            <td>eos odio dolor cum itaque</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td>consectetur itaque ipsam eum</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td>Itaque molestias quidem eti</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td>Fuga officia possimus tempore</td>
+          </tr>
+        </table>
+      </section>
+
+    </section>
+
+
+
+  </div>
+
+
+
+
+  <!-- FOOTER -->
   <footer>
-    <p>Copyright Pablo 2021</p>
+    <div class="footerGrid redondeoVisual">
+
+      <section>
+        <div class="formasContacto">
+          <div>
+            <a href="mailto:cuenta@deemail.com" target="_blank">
+              <img src="./images/icono-email1.png" alt="email" />
+            </a>
+          </div>
+          <div>
+            <a href="mailto:cuenta@deemail.com" target="_blank">
+              contacto@aplicacionweb.com
+            </a>
+          </div>
+        </div>
+        <div class="formasContacto">
+          <div>
+            <a href="tel:01234567890">
+              <img src="./images/icono-telefono1.png" alt="telefono" />
+            </a>
+          </div>
+          <div>
+            <a href="tel:01234567890">
+              +54 11 1234-5678
+            </a>
+
+          </div>
+        </div>
+        <div class="formasContacto">
+          <div>
+            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank">
+              <img src="./images/icono-ubicacion1.png" alt="ubicacion" />
+            </a>
+          </div>
+          <div>
+            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank">
+              Av. Cabildo 2000, C1428, CABA, Argentina
+            </a>
+
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="formasContacto">
+          <h1>Suscribite a nuestro Newsletter para recibir Promociones & Noticias</h1>
+          <form>
+            <input type="email" name="emailSuscripcion" id="emailSuscripcion" placeholder="tu@email.com">
+            <input type="submit" value="Suscribirme" />
+          </form>
+        </div>
+      </section>
+
+    </div>
   </footer>
 </body>
 
