--- a/planes.html
+++ b/planes.html
@@ -54,71 +54,45 @@
 
       <h1>Planes</h1>
 
-      <section class="contenido">
-        <table>
-          <tr>
-            <th>Estándar</th>
-            <th>Plus</th>
-            <th>Premium</th>
-          </tr>
-          <tr>
-            <td>Lorem ipsum dolor sit amet</td>
-            <td>Lorem ipsum dolor sit amet</td>
-            <td>Lorem ipsum dolor sit amet</td>
-          </tr>
-          <tr>
-            <td>consectetur adipisicing elit</td>
-            <td>consectetur adipisicing elit</td>
-            <td>consectetur adipisicing elit</td>
-          </tr>
-          <tr>
-            <td>Quisquam architecto minus</td>
-            <td>Quisquam architecto minus</td>
-            <td>Quisquam architecto minus</td>
-          </tr>
-          <tr>
-            <td>perspiciatis expedita nesciunt</td>
-            <td>perspiciatis expedita nesciunt</td>
-            <td>perspiciatis expedita nesciunt</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>aut ratione delectus rem indi</td>
-            <td>aut ratione delectus rem indi</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>doloribus dolore voluptatibus</td>
-            <td>doloribus dolore voluptatibus</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>eos odio dolor cum itaque</td>
-            <td>eos odio dolor cum itaque</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td>consectetur itaque ipsam eum</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td>Itaque molestias quidem eti</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td>Fuga officia possimus tempore</td>
-          </tr>
-        </table>
-      </section>
+      <div id="planes-contenedor">
+        <div class="planes-grid">
+          <section class="planes">
+            <h4>Estándar</h4>
+            <p>Lorem ipsum dolor sit amet</p>
+            <p>consectetur adipisicing elit</p>
+            <p>Quisquam architecto minus</p>
+            <p>perspiciatis expedita nesciunt</p>
+          </section>
 
-    </section>
+          <section class="planes">
+            <h4>Gold</h4>
+            <p>Lorem ipsum dolor sit amet</p>
+            <p>consectetur adipisicing elit</p>
+            <p>Quisquam architecto minus</p>
+            <p>perspiciatis expedita nesciunt</p>
+            <p>aut ratione delectus rem indi</p>
+            <p>doloribus dolore voluptatibus</p>
+            <p>eos odio dolor cum itaque</p>
+          </section>
 
-
+          <section class="planes">
+            <h4>Premium</h4>
+            <p>Lorem ipsum dolor sit amet</p>
+            <p>consectetur adipisicing elit</p>
+            <p>Quisquam architecto minus</p>
+            <p>perspiciatis expedita nesciunt</p>
+            <p>aut ratione delectus rem indi</p>
+            <p>doloribus dolore voluptatibus</p>
+            <p>eos odio dolor cum itaque</p>
+            <p>consectetur itaque ipsam eum</p>
+            <p>Itaque molestias quidem eti</p>
+            <p>Fuga officia possimus tempore</p>
+          </section>
+        </div>
+      </div>
 
   </div>
+
 
 
 
