Desafío Animaciones, Transiciones, Transformaciones

--- a/contacto.html
+++ b/contacto.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,400&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 
@@ -52,7 +53,7 @@
 
     <section class="seccionDescripcion">
 
-      <h1>Contacto</h1>
+      <h1 class="animate__animated animate__fadeIn">Contacto</h1>
 
       <section class="contenido">
         <div class="formularioContacto">
@@ -84,7 +85,7 @@
     <aside>
 
 
-      <h3>Nuestra Visión</h3>
+      <h3 class="animate__animated animate__backInRight">Nuestra Visión</h3>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
         architecto minus perspiciatis expedita nesciunt, aut ratione delectus
