--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aplicación Web</title>
-  <link rel="stylesheet" href="./styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,400&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 
@@ -46,13 +47,13 @@
 
 
   <!-- HERO -->
-  <section class="imagenPrincipal"></section>
+  <section class="imagenPrincipal animate__animated animate__fadeIn"></section>
 
 
 
 
   <!-- DESCRIPCION -->
-  <div class="contenedorFlex redondeoVisual">
+  <div class="contenedorFlex gradiente">
 
     <section class="seccionDescripcion">
 
@@ -109,6 +110,50 @@
     </aside>
 
   </div>
+
+
+
+
+
+
+
+
+  <!-- TESTIMONIOS -->
+
+  <section class="seccionTestimonios">
+
+    <div id="testimonios-contenedor">
+
+      <h2 class="animate__animated animate__pulse animate__infinite	infinite">Nuestros Clientes</h2>
+
+      <div class="testimonios-grid">
+        <section class="testimonios">
+          <img src="./images/5estrellas.png" alt="estrellas" />
+          <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, accusamus ullam? Rem exercitationem ex
+            sint. Veniam temporibus aliquid soluta ab corporis."</p>
+        </section>
+
+        <section class="testimonios">
+          <img src="./images/5estrellas.png" alt="estrellas" />
+          <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, accusamus ullam? Rem exercitationem ex
+            sint. Veniam temporibus aliquid soluta ab corporis."</p>
+        </section>
+
+        <section class="testimonios">
+          <img src="./images/5estrellas.png" alt="estrellas" />
+          <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, accusamus ullam? Rem exercitationem ex
+            sint. Veniam temporibus aliquid soluta ab corporis."</p>
+        </section>
+
+        <section class="testimonios">
+          <img src="./images/5estrellas.png" alt="estrellas" />
+          <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, accusamus ullam? Rem exercitationem ex
+            sint. Veniam temporibus aliquid soluta ab corporis."</p>
+        </section>
+      </div>
+    </div>
+  </section>
+
 
 
 
