--- a/planes.html
+++ b/planes.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,400&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 
@@ -46,13 +47,12 @@
 
 
 
-
   <!-- DESCRIPCION -->
   <div class="contenedorFlex redondeoVisual">
 
     <section class="seccionDescripcion">
 
-      <h1>Planes</h1>
+      <h1 class="animate__animated animate__fadeIn">Planes</h1>
 
       <div id="planes-contenedor">
         <div class="planes-grid">
@@ -75,8 +75,8 @@
             <p>eos odio dolor cum itaque</p>
           </section>
 
-          <section class="planes">
-            <h4>Premium</h4>
+          <section class="planes animate__animated animate__tada">
+            <h4 class="animate__animated animate__pulse animate__infinite	infinite">Premium</h4>
             <p>Lorem ipsum dolor sit amet</p>
             <p>consectetur adipisicing elit</p>
             <p>Quisquam architecto minus</p>
