--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,400&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 
@@ -53,7 +54,7 @@
     <section class="seccionDescripcion">
 
 
-      <h1>Características</h1>
+      <h1 class="animate__animated animate__fadeIn">Características</h1>
 
       <section class="contenido">
         <ol>
