--- a/planes.html
+++ b/planes.html
@@ -75,7 +75,7 @@
             <p>eos odio dolor cum itaque</p>
           </section>
 
-          <section class="planes animate__animated animate__tada">
+          <!--           <section class="planes animate__animated animate__tada">
             <h4 class="animate__animated animate__pulse animate__infinite	infinite">Premium</h4>
             <p>Lorem ipsum dolor sit amet</p>
             <p>consectetur adipisicing elit</p>
@@ -87,7 +87,22 @@
             <p>consectetur itaque ipsam eum</p>
             <p>Itaque molestias quidem eti</p>
             <p>Fuga officia possimus tempore</p>
+          </section> -->
+
+          <section>
+            <h4>Premium</h4>
+            <p>Lorem ipsum dolor sit amet</p>
+            <p>consectetur adipisicing elit</p>
+            <p>Quisquam architecto minus</p>
+            <p>perspiciatis expedita nesciunt</p>
+            <p>aut ratione delectus rem indi</p>
+            <p>doloribus dolore voluptatibus</p>
+            <p>eos odio dolor cum itaque</p>
+            <p>consectetur itaque ipsam eum</p>
+            <p>Itaque molestias quidem eti</p>
+            <p>Fuga officia possimus tempore</p>
           </section>
+
         </div>
       </div>
 
