Desafío Animaciones, Transiciones, Transformaciones

--- a/planes.html
+++ b/planes.html
@@ -89,7 +89,7 @@
             <p>Fuga officia possimus tempore</p>
           </section> -->
 
-          <section>
+          <section class="planes">
             <h4>Premium</h4>
             <p>Lorem ipsum dolor sit amet</p>
             <p>consectetur adipisicing elit</p>
