Desafío Animaciones, Transiciones, Transformaciones

--- a/planes.html
+++ b/planes.html
@@ -89,8 +89,8 @@
             <p>Fuga officia possimus tempore</p>
           </section> -->
 
-          <section class="planes">
-            <h4>Premium</h4>
+          <section class="planes animate__animated animate__tada">
+            <h4 class="animate__animated animate__pulse animate__infinite infinite">Premium</h4>
             <p>Lorem ipsum dolor sit amet</p>
             <p>consectetur adipisicing elit</p>
             <p>Quisquam architecto minus</p>
