--- a/index.html
+++ b/index.html
@@ -7,41 +7,55 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aplicación Web</title>
-  <link rel="stylesheet" href="./styles/styles.css">
+  <!-- GOOGLE FONTS-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,400&display=swap"
     rel="stylesheet">
+  <!-- ANIMATE.CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- BOOTSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- MI CSS -->
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 
 <body>
 
   <!-- CABECERA -->
-  <header class="cabecera">
-    <div class="cabeceraLogo">
-      <a href="./index.html">
-        <img src="./images/logo.png" alt="logo" />
-      </a>
-    </div>
-    <nav class="menuCompleto">
-      <ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./caracteristicas.html">Características</a></li>
-        <li><a href="./planes.html">Planes</a></li>
-        <li><a href="./soporte.html">Soporte</a></li>
-        <li><a href="./contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
 
-    <div class="menuHamburguesa">
-      <a href="./index.html">
-        <img src="./images/hamburger4.png" alt="hamburger" />
-      </a>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white ">
+    <div class="container-fluid">
+      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="" width="100" height=""
+          class="d-inline-block align-top animacionLogo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Hamburgesa">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./caracteristicas.html">Características</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./planes.html">Planes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./soporte.html">Soporte</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </header>
+  </nav>
 
 
 
@@ -216,6 +230,28 @@
 
     </div>
   </footer>
+
+  <!-- Jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <!-- Movimiento y achicamiento del Menu al hacer Scroll -->
+  <script>
+    $(function () {
+      $(window).scroll(function () {
+        if ($(window).scrollTop() <= 40) {
+          $('.navbar').removeClass('navbar_escroleado')
+        } else {
+          $('.navbar').addClass('navbar_escroleado')
+        }
+      })
+    })
+  </script>
+
+  <!-- Bootstrap Javascript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+
 </body>
 
 </html>
