--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -26,95 +26,130 @@
 <body>
 
   <!-- CABECERA -->
-  <header class="cabecera">
-    <div class="cabeceraLogo">
-      <a href="./index.html">
-        <img src="./images/logo.png" alt="logo" />
-      </a>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white ">
+    <div class="container-fluid">
+      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="" width="100" height=""
+          class="d-inline-block align-top animacionLogo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Hamburgesa">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./caracteristicas.html">Características</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./planes.html">Planes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./soporte.html">Soporte</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <nav class="menuCompleto">
-      <ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./caracteristicas.html">Características</a></li>
-        <li><a href="./planes.html">Planes</a></li>
-        <li><a href="./soporte.html">Soporte</a></li>
-        <li><a href="./contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-
-    <div class="menuHamburguesa">
-      <a href="./index.html">
-        <img src="./images/hamburger4.png" alt="hamburger" />
-      </a>
-    </div>
-  </header>
+  </nav>
 
 
 
+  <!-- HERO -->
+  <section class="imagenPrincipal animate__animated animate__fadeIn"></section>
 
 
 
   <!-- DESCRIPCION -->
-  <div class="contenedorFlex redondeoVisual">
+  <div class="redondeoVisual">
 
-    <section class="seccionDescripcion">
+    <h1 class="animate__animated animate__fadeIn">Características</h1>
 
 
-      <h1 class="animate__animated animate__fadeIn">Características</h1>
 
-      <section class="contenido">
-        <ol>
-          <li>
-            Característica 1
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
+    <div class="card mb-3" style="max-width: 1100px; margin:auto; border: none;">
+      <div class="row g-0">
+        <div class="col-md-4" style="text-align :center; margin: auto;">
+          <img src="./images/beneficio-06.svg" class="img-fluid rounded-start" alt="beneficio-06" style="margin:auto;">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Caraterística 1</h5>
+            <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
               totam placeat voluptatum sunt harum id exercitationem quos porro?
               Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-              tenetur harum nemo!
-            </p>
-          </li>
-          <li>
-            Característica 2
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
+              tenetur harum nemo!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="contenedorFlex redondeoVisual">
+      <div class=" card mb-3" style="max-width: 1100px; margin:auto; border: none;">
+        <div class="row g-0">
+          <div class="col-md-4" style="text-align: center; margin: auto;">
+            <img src="./images/beneficio-03.svg" class="img-fluid rounded-start" alt="beneficio-03">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Característica 2</h5>
+              <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
+                totam placeat voluptatum sunt harum id exercitationem quos porro?
+                Rerum deserunt consequatur, deleniti quos at voluptate repellendus
+                tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
+                dignissimos iusto quidem ratione nulla, corrupti eligendi magni
+                veritatis recusandae atque laudantium nesciunt cum dolorum odio.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card mb-3" style="max-width: 1100px; margin:auto; border: none;">
+      <div class="row g-0">
+        <div class="col-md-4" style="text-align :center; margin: auto;">
+          <img src="./images/beneficio-07.svg" class="img-fluid rounded-start" alt="beneficio-07" style="margin:auto;">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Caraterística 3</h5>
+            <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
               totam placeat voluptatum sunt harum id exercitationem quos porro?
               Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-              tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
-              dignissimos iusto quidem ratione nulla, corrupti eligendi magni
-              veritatis recusandae atque laudantium nesciunt cum dolorum odio.
-            </p>
-          </li>
-          <li>
-            Característica 3
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-              totam placeat voluptatum sunt harum id exercitationem quos porro?
-              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-              tenetur harum nemo!
-            </p>
-          </li>
-        </ol>
-      </section>
+              tenetur harum nemo!</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="contenedorFlex redondeoVisual">
+      <div class=" card mb-3" style="max-width: 1100px; margin:auto; border: none;">
+        <div class="row g-0">
+          <div class="col-md-4" style="text-align: center; margin: auto;">
+            <img src="./images/beneficio-09.svg" class="img-fluid rounded-start" alt="beneficio-09">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Característica 4</h5>
+              <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
+                totam placeat voluptatum sunt harum id exercitationem quos porro?
+                Rerum deserunt consequatur, deleniti quos at voluptate repellendus
+                tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
+                dignissimos iusto quidem ratione nulla, corrupti eligendi magni
+                veritatis recusandae atque laudantium nesciunt cum dolorum odio.</p>
+            </div>
+          </div>
 
-    </section>
-
-
-
-    <!-- SIDEBAR -->
-    <aside>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/W-f6F2gxrl4" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum exercitationem, repudiandae debitis fugit
-        dolorem dignissimos consectetur mollitia obcaecati? Ducimus explicabo dolore maxime recusandae, quod sapiente
-        iste
-        eaque architecto? Sunt, nam.
-      </p>
-    </aside>
+        </div>
+      </div>
+    </div>
 
   </div>
 
@@ -179,10 +214,27 @@
     </div>
   </footer>
 
+  <!-- Jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <!-- Movimiento y achicamiento del Menu al hacer Scroll -->
+  <script>
+    $(function () {
+      $(window).scroll(function () {
+        if ($(window).scrollTop() <= 40) {
+          $('.navbar').removeClass('navbar_escroleado')
+        } else {
+          $('.navbar').addClass('navbar_escroleado')
+        }
+      })
+    })
+  </script>
+
   <!-- Bootstrap Javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
+
 </body>
 
 </html>
