--- a/contacto.html
+++ b/contacto.html
@@ -26,33 +26,44 @@
 <body>
 
   <!-- CABECERA -->
-  <header class="cabecera">
-    <div class="cabeceraLogo">
-      <a href="./index.html">
-        <img src="./images/logo.png" alt="logo" />
-      </a>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white ">
+    <div class="container-fluid">
+      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="" width="100" height=""
+          class="d-inline-block align-top animacionLogo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Hamburgesa">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./caracteristicas.html">Características</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./planes.html">Planes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./soporte.html">Soporte</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <nav class="menuCompleto">
-      <ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./caracteristicas.html">Características</a></li>
-        <li><a href="./planes.html">Planes</a></li>
-        <li><a href="./soporte.html">Soporte</a></li>
-        <li><a href="./contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-
-    <div class="menuHamburguesa">
-      <a href="./index.html">
-        <img src="./images/hamburger4.png" alt="hamburger" />
-      </a>
-    </div>
-  </header>
+  </nav>
 
 
 
 
-
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <strong>¡Probalo Gratis!</strong> Recordá que completando el formulario también podés solicitar acceso a la versión
+    de prueba 100% funcional.
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
 
   <!-- DESCRIPCION -->
   <div class="contenedorFlex redondeoVisual">
@@ -73,12 +84,18 @@
             <label for="telefono">Teléfono:</label>
             <input type="tel" id="telefono" name="telefono" />
 
+            <div class="form-check" style="padding: 30px ;">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <label class="form-check-label" for="flexCheckDefault">
+                Solicitar acceso a Versión de Prueba
+              </label>
+            </div>
+
             <label for="mensaje">Mensaje:</label>
             <textarea id="mensaje" name="mensaje" rows="7" cols="21"></textarea>
 
             <input type="submit" value="Enviar" />
           </form>
-        </div>
 
       </section>
 
@@ -167,10 +184,27 @@
     </div>
   </footer>
 
+  <!-- Jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <!-- Movimiento y achicamiento del Menu al hacer Scroll -->
+  <script>
+    $(function () {
+      $(window).scroll(function () {
+        if ($(window).scrollTop() <= 40) {
+          $('.navbar').removeClass('navbar_escroleado')
+        } else {
+          $('.navbar').addClass('navbar_escroleado')
+        }
+      })
+    })
+  </script>
+
   <!-- Bootstrap Javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
+
 </body>
 
 </html>
