--- a/soporte.html
+++ b/soporte.html
@@ -26,89 +26,123 @@
 <body>
 
   <!-- CABECERA -->
-  <header class="cabecera">
-    <div class="cabeceraLogo">
-      <a href="./index.html">
-        <img src="./images/logo.png" alt="logo" />
-      </a>
-    </div>
-    <nav class="menuCompleto">
-      <ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./caracteristicas.html">Características</a></li>
-        <li><a href="./planes.html">Planes</a></li>
-        <li><a href="./soporte.html">Soporte</a></li>
-        <li><a href="./contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-
-    <div class="menuHamburguesa">
-      <a href="./index.html">
-        <img src="./images/hamburger4.png" alt="hamburger" />
-      </a>
-    </div>
-  </header>
-
-
-
-
-
-
-  <!-- DESCRIPCION -->
-  <div class="contenedorFlex redondeoVisual">
-
-    <section class="seccionDescripcion">
-
-      <h1 class="animate__animated animate__fadeIn">Soporte</h1>
-
-      <section class="contenido">
-        <ul>
-          <li>
-            Pregunta Frecuente 1
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-              totam placeat voluptatum sunt harum id exercitationem quos porro?
-              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-              tenetur harum nemo!
-            </p>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white ">
+    <div class="container-fluid">
+      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="" width="100" height=""
+          class="d-inline-block align-top animacionLogo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Hamburgesa">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Inicio</a>
           </li>
-          <li>
-            Pregunta Frecuente 2
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-              totam placeat voluptatum sunt harum id exercitationem quos porro?
-              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-              tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
-              dignissimos iusto quidem ratione nulla, corrupti eligendi magni
-              veritatis recusandae atque laudantium nesciunt cum dolorum odio.
-            </p>
+          <li class="nav-item">
+            <a class="nav-link" href="./caracteristicas.html">Características</a>
           </li>
-          <li>
-            Pregunta Frecuente 3
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-              totam placeat voluptatum sunt harum id exercitationem quos porro?
-              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-              tenetur harum nemo!
-            </p>
+          <li class="nav-item">
+            <a class="nav-link" href="./planes.html">Planes</a>
           </li>
-          <li>
-            Pregunta Frecuente 4
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-              totam placeat voluptatum sunt harum id exercitationem quos porro?
-              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-              tenetur harum nemo!
-            </p>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./soporte.html">Soporte</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contacto.html">Contacto</a>
           </li>
         </ul>
-      </section>
+      </div>
+    </div>
+  </nav>
 
+
+
+  <!-- DESCRIPCION FAQ-->
+  <div class="redondeoVisual">
+
+    <section class="seccionDescripcion">
+      <h1 class="animate__animated animate__fadeIn">Preguntas Frecuentes</h1>
     </section>
 
-
-
+    <div class="accordion" id="acordionSoporte" style="padding:25px 40px 100px;">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+            aria-expanded="true" aria-controls="collapseOne">
+            Pregunta Frecuente 1
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+          data-bs-parent="#acordionSoporte">
+          <div class="accordion-body">
+            <strong>Esta es la primera pregunta Frecuente.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing
+            elit. Quis sint totam placeat voluptatum sunt harum id exercitationem quos porro? Rerum deserunt
+            consequatur, deleniti quos at voluptate repellendustenetur harum nemo!
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Pregunta Frecuente 2
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+          data-bs-parent="#acordionSoporte">
+          <div class="accordion-body">
+            <strong>Esta es la segunda pregunta frecuente.</strong> Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. Quis sint
+            totam placeat voluptatum sunt harum id exercitationem quos porro?
+            Rerum deserunt consequatur, deleniti quos at voluptate repellendus
+            tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
+            dignissimos iusto quidem ratione nulla, corrupti eligendi magni
+            veritatis recusandae atque laudantium nesciunt cum dolorum odio.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Pregunta Frecuente 3
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+          data-bs-parent="#acordionSoporte">
+          <div class="accordion-body">
+            <strong>Esta es la tercera pregunta frecuente.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing
+            elit. Quis sint
+            totam placeat voluptatum sunt harum id exercitationem quos porro?
+            Rerum deserunt consequatur, deleniti quos at voluptate repellendus
+            tenetur harum nemo!
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFour">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            Pregunta Frecuente 4
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+          data-bs-parent="#acordionSoporte">
+          <div class="accordion-body">
+            <strong>Este es la cuarta pregunta frecuente.</strong> Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. Quis sint
+            totam placeat voluptatum sunt harum id exercitationem quos porro?
+            Rerum deserunt consequatur, deleniti quos at voluptate repellendus
+            tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
+            dignissimos iusto quidem ratione nulla, corrupti eligendi magni
+            veritatis recusandae atque laudantium nesciunt cum dolorum odio.
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 
@@ -172,10 +206,27 @@
     </div>
   </footer>
 
+  <!-- Jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <!-- Movimiento y achicamiento del Menu al hacer Scroll -->
+  <script>
+    $(function () {
+      $(window).scroll(function () {
+        if ($(window).scrollTop() <= 40) {
+          $('.navbar').removeClass('navbar_escroleado')
+        } else {
+          $('.navbar').addClass('navbar_escroleado')
+        }
+      })
+    })
+  </script>
+
   <!-- Bootstrap Javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
+
 </body>
 
 </html>
