Todo el Sitio con Bootstrap

--- a/contacto.html
+++ b/contacto.html
@@ -87,7 +87,7 @@
             <div class="form-check" style="padding: 30px ;">
               <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
               <label class="form-check-label" for="flexCheckDefault">
-                Solicitar acceso a Versión de Prueba
+                Solicitar acceso a la Versión de Prueba
               </label>
             </div>
 
