Todo el Sitio con Bootstrap

--- a/contacto.html
+++ b/contacto.html
@@ -72,7 +72,7 @@
 
       <h1 class="animate__animated animate__fadeIn">Contacto</h1>
 
-      <section class="contenido">
+      <section class="contenido" id="contenidoFormulario">
         <div class="formularioContacto">
           <form method="post" action="">
             <label for="nombre">Nombre:</label>
